--- a/psswrd-chngr.html
+++ b/psswrd-chngr.html
@@ -135,7 +135,7 @@
         const EMAILJS_SERVICE_ID = 'LVR_Inviter';
         const EMAILJS_TEMPLATE_ID = 'template_odnburo';
         
-        let supabase = null;
+        let supabaseClient = null;
         let currentUser = null;
         let selectedUserId = null;
         let selectedUserEmail = null;
