Откат багов... ПОЧИНИСЬ ТЫ УЖЕ НАКОНЕЦ

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -204,6 +204,7 @@
         const EMAILJS_SERVICE_ID = 'LVR_Inviter';
         const EMAILJS_TEMPLATE_ID = 'template_odnburo';
         
+        let supabase = null;
         let currentUser = null;
         let isAdmin = false;
         let isLocalAdmin = false;
