--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,7 @@
         };
         
         // Инициализация Supabase
-        const supabaseClient = window.supabaseClient.createClient(
+        const supabaseClient = window.supabase.createClient(
             SUPABASE_CONFIG.url, 
             SUPABASE_CONFIG.key
         );
