--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
         // Проверяем, является ли пользователь админом
         async function checkAdminStatus(userId) {
             try {
-                const { data, error } = await supabase
+                const { data, error } = await supabaseClient
                     .from('profiles')
                     .select('user_type')
                     .eq('id', userId)
