--- a/admin-panel.html
+++ b/admin-panel.html
@@ -112,6 +112,7 @@
                 <button class="btn" onclick="checkPage('leaderboard.html')">leaderboard.html</button>
                 <button class="btn" onclick="checkPage('login.html')">login.html</button>
                 <button class="btn" onclick="checkPage('music-player.html')">music-player.html</button>
+                <button class="btn" onclick="checkPage('news.html')">news.html</button>
                 <button class="btn" onclick="checkPage('price-list.html')">price-list.html</button>
                 <button class="btn" onclick="checkPage('register.html')">register.html</button>
                 <button class="btn" onclick="checkPage('rules.html')">rules.html</button>
