--- a/index.html
+++ b/index.html
@@ -1068,6 +1068,10 @@
                         <div class="link-icon">🚀</div>
                         <div class="link-text">Квест</div>
                     </a>
+                    <a href="news.html" class="link-card">
+                        <div class="link-icon">📰</div>
+                        <div class="link-text">Новости сайта</div>
+                    </a>
                     <a href="upd-form.html" class="link-card">
                         <div class="link-icon">✉️</div>
                         <div class="link-text">Предложить правки</div>
