--- a/tea.html
+++ b/tea.html
@@ -290,7 +290,7 @@
         <div class="message">418 - I'm a teapot</div>
         <div>Кликай на меня и получишь случайный напиток!</div>
         <div style="margin-top: 10px; font-size: 0.9em; color: #666;">
-            *50% чай (+10), 49.9% кофе (+15), 0.1% квантовый (+50)
+            *49.5% чай (+10), 49.5% кофе (+20), 1% квантовый (+50)
         </div>
 
         <!-- Аудио элементы -->
@@ -309,9 +309,9 @@
             <h3>📜 ПРАВИЛА ИГРЫ</h3>
             <ul style="padding-left: 20px;">
                 <li>Кликни на чайник - получи случайный напиток</li>
-                <li><strong>49.9% шанс</strong> - чай 🍵 (+10 очков)</li>
-                <li><strong>49.9% шанс</strong> - кофе ☕ (+15 очков)</li>
-                <li><strong>0.2% шанс</strong> - квантовый напиток ⚛️ (+50 очков)</li>
+                <li><strong>49.5% шанс</strong> - чай 🍵 (+10 очков)</li>
+                <li><strong>49.5% шанс</strong> - кофе ☕ (+20 очков)</li>
+                <li><strong>1% шанс</strong> - квантовый напиток ⚛️ (+50 очков)</li>
                 <li>Gambling Mode автоматически кликает каждые 3 секунды</li>
             </ul>
         </div>
@@ -418,10 +418,12 @@
             const phrases = [
                 "Кликни на меня!",
                 "Что сегодня заварю?",
-                "50% чай, 49.9% кофе, 0.1% КВАНТ!",
+                "49.5% чай, 49.5% кофе, 1% КВАНТ!",
                 "Чайник с характером!",
                 "Только не жди, что я буду варить кофе!",
                 "418 - это мой код!",
+                "418 I'M A TEAPOT",
+                "Hyper Text Coffee Pot Control Protocol (HTCPCP)",
                 "Случайность - мое второе имя!",
                 "Будь готов к сюрпризам!",
                 "Gambling Mode активирован!",
@@ -655,17 +657,17 @@
             setTimeout(async () => {
                 const randomValue = await getCryptoRandom();
                 
-                // 49.9% чай, 49.9% кофе, 0.2% квантовый напиток
+                // 49.5% чай, 49.5% кофе, 1% квантовый напиток
                 if (randomValue < 0.49) {
                     // Чай
                     await addToLeaderboard('tea', 10);
                     playSound('successSound');
                     showStatus(`🍵 Чай заварен! +10 очков (${randomValue.toFixed(4)})`, true);
-                } else if (randomValue > 0.51) {
+                } else if (randomValue > 0.50) {
                     // Кофе
-                    await addToLeaderboard('coffee', 15);
+                    await addToLeaderboard('coffee', 20);
                     playSound('successSound');
-                    showStatus(`☕ Кофе сварено! +15 очков (${randomValue.toFixed(4)})`, true);
+                    showStatus(`☕ Кофе сварено! +12 очков (${randomValue.toFixed(4)})`, true);
                 } else {
                     // КВАНТОВЫЙ НАПИТОК!
                     await addToLeaderboard('quantum', 50);
