--- a/news.html
+++ b/news.html
@@ -92,9 +92,25 @@
         <div style="margin-bottom: 30px;">
             <a href="index.html" class="back-link">← На главную</a>
         </div>
+        <div class="news-header">Обновления</div>
+        <div class="news-date">17 декабря 2025, 09:15</div>
+        <div class="news-content">
+            <p>Обновлены: чай, логин и админ-панель. На данный момент все страницы в работоспособном состоянии.</p>
+            <p></p>
+            <p>Обновление чая: <br>Шанс чай/кофе/квантовый теперь равен 49.5%/49.5%/1%, т.к. в ином случае квант может стать слишком редким (а как показали тесты, <br> квант вообще не выпадал)</p>
+            <p></p>
+            <p>Обновление админ-панели: исправлена функция supabaseClient, переименована в client. <br> Теперь никаких ошибок из-за неправильных функций/конфликтов имён быть не должно.</p>
+            <p></p>
+            <p>Обновление страницы входа: исправлена функция supabaseClient, переименована в client. <br> Те же ошибки что были в admin-panel.html, с той лишь разницей <br> что из-за этой страницы сайт не грузился вообще.</p>
+            <p></p>
+            <p>По всем багам сообщать через upd-form.html (кнопка "Предложить правки" на главной)</p>
+            <p>С наилучшими пожеланиями, команда LogovoVR</p>
+        </div>
 
+    </div>
+    <div class="container">
         <div class="news-header">Сайт восстановлен после масштабного бага</div>
-        <div class="news-date">18 марта 2025, 23:30</div>
+        <div class="news-date">16 декабря 2025, 23:30</div>
         <div class="news-content">
             <p>Основной функционал сайта (авторизация, бронирование, админ-панель) полностью восстановлен после критической ошибки с конфликтом имён переменных Supabase.</p>
             <p>Теперь здесь будет появляться актуальная информация об обновлениях и важных событиях клуба.</p>
