--- a/news.html
+++ b/news.html
@@ -91,7 +91,19 @@
     <div class="container">
         <div style="margin-bottom: 30px;">
             <a href="index.html" class="back-link">← На главную</a>
+        </div>        
+        <div class="news-header">Обновление</div>
+        <div class="news-date">18 декабря, 17:00</div>
+        <div class="news-content">
+            <p>Обновлена: форма бронирования. Теперь у вас есть возможность выбирать тарифный план в соответствии с price-list.html.</p>
+            <p>В соответствии с этим была обновлена админ-панель часть, отвечающая за контроль бронирований.</p>
+            <p></p>
+            <p>Просьба по всем багам сообщать через "Предложить правки" (главная страница) написав тему "Баги".</p>
+            <p>С любовью к пользователям, ваш Logovo VR</p>
         </div>
+    </div>
+
+    <div class="container">
         <div class="news-header">Обновления</div>
         <div class="news-date">17 декабря 2025, 09:15</div>
         <div class="news-content">
@@ -103,8 +115,7 @@
             <p></p>
             <p>Обновление страницы входа: исправлена функция supabaseClient, переименована в client. <br> Те же ошибки что были в admin-panel.html, с той лишь разницей <br> что из-за этой страницы сайт не грузился вообще.</p>
             <p></p>
-            <p>По всем багам сообщать через upd-form.html (кнопка "Предложить правки" на главной)</p>
-            <p>С наилучшими пожеланиями, команда LogovoVR</p>
+            <p>По всем багам сообщать через upd-form.html (кнопка "Предложить правки" на главной), написав тему "Баги"</p>
         </div>
 
     </div>
