--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
             background: #0a0a0a;
             color: #00ff88;
             text-align: center;
-            font-family: 'Courier New', monospace;
+            font-family: monospace;
             padding: 50px;
         }
         h1 {
