--- a/booking.html
+++ b/booking.html
@@ -11,7 +11,7 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { 
-            font-family: 'Courier New', monospace;
+            font-family: monospace;
             background: #0a0a0a;
             color: #00ff88;
             min-height: 100vh;
