--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             border-radius: 10px;
             padding: 15px;
             color: #00ff88;
-            font-family: 'Courier New', monospace;
+            font-family: monospace;
             font-size: 14px;
             min-width: 200px;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.7);
@@ -153,7 +153,7 @@
             padding: 8px 12px;
             border-radius: 5px;
             cursor: pointer;
-            font-family: 'Courier New', monospace;
+            font-family: monospace;
             font-size: 13px;
             text-align: center;
             text-decoration: none;
