--- a/admin-panel.html
+++ b/admin-panel.html
@@ -560,7 +560,7 @@
                 return;
             }
             
-            let html = '<table class="data-table"><thead><tr><th>ID</th><th>Телефон</th><th>Username</th><th>Тип</th><th>Создан</th><th>Обновлен</th><th>Последний логин</th><th>Действия</th></tr></thead><tbody>';
+            let html = '<table class="data-table"><thead><tr><th>ID</th><th>Телефон</th><th>Username</th><th>Тип</th><th>Создан</th><th>Последний логин</th><th>Действия</th></tr></thead><tbody>';
             
             profiles.forEach(profile => {
                 const shortId = profile.id ? profile.id.substring(0, 8) + '...' : 'N/A';
@@ -569,7 +569,6 @@
                 const userType = profile.user_type || 'user';
                 const userTypeColor = userType === 'admin' ? '#00ff00' : '#8fd493';
                 const created = profile.created_at ? new Date(profile.created_at).toLocaleString('ru-RU') : 'Нет данных';
-                const updated = profile.updated_at ? new Date(profile.updated_at).toLocaleString('ru-RU') : 'Нет данных';
                 const emailForAttr = (profile.email || username).replace(/'/g, "\\'").replace(/"/g, '&quot;');
                 const lastLogin = profile.last_login_at || profile.last_sign_in_at || 'Never';
                 const usernameForAttr = username.replace(/'/g, "\\'").replace(/"/g, '&quot;');
@@ -581,7 +580,6 @@
                     '<td>' + username + '</td>' +
                     '<td style="color: ' + userTypeColor + '">' + userType + '</td>' +
                     '<td>' + created + '</td>' +
-                    '<td>' + updated + '</td>' +
                     '<td>' + lastLoginFormatted + '</td>' +
                     '<td>' +
                         '<button class="action-btn" onclick="makeAdmin(\'' + profile.id + '\', \'' + emailForAttr + '\')">👑</button>' +
