--- a/admin-panel.html
+++ b/admin-panel.html
@@ -576,7 +576,7 @@
                 
                 html += '<tr>' +
                     '<td title="' + (profile.id || '') + '">' + shortId + '</td>' +
-                    '<td>' + phone + '</td>'
+                    '<td>' + phone + '</td>' +
                     '<td>' + username + '</td>' +
                     '<td style="color: ' + userTypeColor + '">' + userType + '</td>' +
                     '<td>' + created + '</td>' +
