--- a/admin-panel.html
+++ b/admin-panel.html
@@ -560,7 +560,7 @@
                 return;
             }
             
-            let html = '<table class="data-table"><thead><tr><th>Почта</th><th>Телефон</th><th>Username</th><th>Тип</th><th>Создан</th><th>Последний логин</th><th>Действия</th></tr></thead><tbody>';
+            let html = '<table class="data-table"><thead><tr><th>Почта</th><th>Телефон</th><th>Имя пользователя</th><th>Тип</th><th>Создан</th><th>Последний логин</th><th>Действия</th></tr></thead><tbody>';
             
             profiles.forEach(profile => {
                 const email = profile.email || 'N/A';
