--- a/news.html
+++ b/news.html
@@ -90,7 +90,20 @@
     <div class="container">
         <div style="margin-bottom: 30px;">
             <a href="index.html" class="back-link">← На главную</a>
+        </div>        
+        <div class="news-header">Найдена неисправность</div>
+        <div class="news-date">20 декабря 2025, 17:00</div>
+        <div class="news-content">
+            <p>Найдена неисправность входа на некоторых моделях телефонов, ошибка Failed to fetch.</p>
+            <p></p>
+            <p>Примерный путь решения (лучше ничего не трогать, разработчик сайта сам не до конца понимает почему появляется ошибка):</p>
+            <p>Настройки → SIM-карты и мобильные сети<br>→ Выберите вашу SIM-карту Мегафон<br>→ Точки доступа (APN)<br>→ Нажмите на вашу точку доступа (например, "internet.megafon.ru")<br>→ Прокрутите до "Тип протокола" или "APN protocol"<br>→ Измените с "IPv4/IPv6" на ТОЛЬКО "IPv4"<br>→ Сохраните (Ещё → Сохранить)</p>
+            <p>Мы уже работаем над устранением проблемы.</p>
+            <p></p>
+            <p>С любовью к клиентам, ваш Logovo VR</p>
         </div>
+    </div>
+    <div class="container">
         <div class="news-header">Обновление</div>
         <div class="news-date">20 декабря 2025, 9:25</div>
         <div class="news-content">
