--- a/news.html
+++ b/news.html
@@ -88,9 +88,16 @@
     </script>
 
     <div class="container">
-        <div style="margin-bottom: 30px;">
-            <a href="index.html" class="back-link">← На главную</a>
-        </div>        
+        <div style="margin-bottom: 30px;"><a href="index.html" class="back-link">← На главную</a></div>
+        <div class="news-header">С Новым 2026 Годом! 🎄</div>
+        <div class="news-date">31 декабря 2025, 23:59 / 1 января 2026, 00:00</div>
+        <div class="news-content">
+            <p>Команда <strong>LogovoVR</strong> поздравляет вас с праздником!</p>
+            <p>В новом году желаем вам невероятных погружений, новых миров и четкой картинки не только в шлеме, но и в жизни. Пусть каждый ваш "квест" завершается победой!</p>
+            <p>С любовью, ваш LogovoVR</p>
+        </div>
+    </div>
+    <div class="container">
         <div class="news-header">Найдена неисправность</div>
         <div class="news-date">20 декабря 2025, 17:00</div>
         <div class="news-content">
