--- a/admin-panel.html
+++ b/admin-panel.html
@@ -207,7 +207,7 @@
         let isAdmin = false;
         let isLocalAdmin = false;
         const passwordHashes = [
-            "2db556f27d28be05fc9745c5513f57fc47e59a8eeda5339a6c3b5bce5258b03e",
+            //"2db556f27d28be05fc9745c5513f57fc47e59a8eeda5339a6c3b5bce5258b03e", он слишком слабый и его можно подобрать за ~50 минут
             "ea613b6918aef7b32e7a875e649c92309eb3a6e0cae10289dc721d74ad2613a5",
             "590ab3a941c688f46e6aba6826f60aa7357d744ad41c2c801264cdc0a3a15806",
             "238146fd103e82c4ff2072c8038193432fc09f376b02642f9eadefa2d5a8203c"
