--- a/music-player.html
+++ b/music-player.html
@@ -268,6 +268,7 @@
             <div class="track-item" data-track="music/Contraption.mp3" data-name="Timofey Yakubov - C0NTR4P710N">Contraption (Timofey Yakubov)</div>
             <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed.mp3" data-name="Dyan Dxxdy - Cute Depressed">Cute Depressed (Dyan Dxxdy)</div>
             <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed_Slowed.mp3" data-name="Dyan Dxxdy - Cute Depressed (Slowed)">Cute Depressed (Slowed) (Dyan Dxxdy)</div>
+            <div class="track-item" data-track="music/HL2-CombineTheme.mp3" data-name="HL2 - Combine Theme">Combine Theme (Half-Life 2)</div>
             <div class="track-item" data-track="music/Imagine_Dragons-Believer.mp3" data-name="Imagine Dragons - Believer">Believer (Imagine Dragons)</div>
             <div class="track-item" data-track="music/Imagine_Dragons-Bones.mp3" data-name="Imagine Dragons - Bones">Bones (Imagine Dragons)</div>
             <div class="track-item" data-track="music/Imagine_Dragons-Natural.mp3" data-name="Imagine Dragons - Natural">Natural (Imagine Dragons)</div>
