--- a/admin-panel-backup.html
+++ b/admin-panel-backup.html
@@ -163,6 +163,7 @@
                 <div class="track-item" data-track="music/C418-Wet_Hands.mp3" data-name="C418 - Wet Hands">Wet Hands (C418, Minecraft)</div>
                 <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed.mp3" data-name="Dyan Dxxdy - Cute Depressed">Cute Depressed (Dyan Dxxdy)</div>
                 <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed_Slowed.mp3" data-name="Dyan Dxxdy - Cute Depressed (Slowed)">Cute Depressed (Slowed) (Dyan Dxxdy)</div>
+                <div class="track-item" data-track="music/HL2-CombineTheme.mp3" data-name="HL2 - Combine Theme">Combine Theme (Half-Life 2)</div>
                 <div class="track-item" data-track="music/Imagine_Dragons-Believer.mp3" data-name="Imagine Dragons - Believer">Believer (Imagine Dragons)</div>
                 <div class="track-item" data-track="music/Imagine_Dragons-Bones.mp3" data-name="Imagine Dragons - Bones">Bones (Imagine Dragons)</div>
                 <div class="track-item" data-track="music/Imagine_Dragons-Natural.mp3" data-name="Imagine Dragons - Natural">Natural (Imagine Dragons)</div>
