--- a/index.html
+++ b/index.html
@@ -996,6 +996,10 @@
             современное оборудование и незабываемые эмоции ждут тебя в нашем клубе.
         </p>
         
+        <div class="description">
+            ВНИМАНИЕ!!! В связи с отсутствием доступа к датабазе (у разработчика сайта не загружается сайт датабазы)</br> и её отключением из-за неактивности, авторизация временно недоступна, как и остальные функции датабазы</br>(бронь/лидерборд/админ-панель)
+        </div>
+
         <div class="cta-buttons">
             <a href="tel:+73466490070" class="cta-button">Забронировать сеанс!</a>
             <a href="price-list.html" class="cta-button secondary">Прайс-лист</a>
