--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
             современное оборудование и незабываемые эмоции ждут тебя в нашем клубе.
         </p>
         
-        <div class="description">
+        <div class="address">
             ВНИМАНИЕ!!! В связи с отсутствием доступа к датабазе (у разработчика сайта не загружается сайт датабазы)</br> и её отключением из-за неактивности, авторизация временно недоступна, как и остальные функции датабазы</br>(бронь/лидерборд/админ-панель)
         </div>
 
